fix<section>width on tablet

--- a/style.css
+++ b/style.css
@@ -406,6 +406,7 @@ a{
     .accommodations{
         padding-bottom: 46px;
         margin-right: 0;
+        width: 100%;
     }
 
     .populars{
